--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "5.0.1",
-    "connect-mongo": "4.6.0",
     "express": "4.17.3",
     "express-handlebars": "6.0.3",
-    "mongoose": "6.2.9"
+    "mongoose": "^6.2.9"
   },
   "devDependencies": {
     "dotenv": "16.0.0",
