--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "init-data": "node install.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,10 @@
     "bcrypt": "5.0.1",
     "express": "4.17.3",
     "express-handlebars": "6.0.3",
-    "mongoose": "^6.2.9"
+    "express-sessions": "1.0.6",
+    "mongoose": "6.2.9",
+    "passport": "0.5.2",
+    "passport-local": "1.0.0"
   },
   "devDependencies": {
     "dotenv": "16.0.0",
