--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "5.0.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "express": "4.17.3",
     "express-handlebars": "6.0.3",
+    "express-session": "^1.17.2",
     "express-sessions": "1.0.6",
     "mongoose": "6.2.9",
     "passport": "0.5.2",
