--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.2",
     "express-sessions": "1.0.6",
     "mongoose": "6.2.9",
+    "morgan": "^1.10.0",
     "passport": "0.5.2",
     "passport-local": "1.0.0"
   },
