--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "6.0.3",
     "express-session": "^1.17.2",
     "express-sessions": "1.0.6",
+    "method-override": "^3.0.0",
     "mongoose": "6.2.9",
     "morgan": "^1.10.0",
     "passport": "0.5.2",
