--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
-    "init-data": "node install.js"
+    "init-data": "node ./init-data.js",
+    "install": "node ./install.js",
+    "valhalla": "node init-data && node install"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +21,13 @@
     "express-handlebars": "6.0.3",
     "express-session": "^1.17.2",
     "express-sessions": "1.0.6",
+    "html-pdf": "^3.0.1",
     "method-override": "^3.0.0",
     "mongoose": "6.2.9",
     "morgan": "^1.10.0",
     "passport": "0.5.2",
-    "passport-local": "1.0.0"
+    "passport-local": "1.0.0",
+    "pdf-creator-node": "^2.3.4"
   },
   "devDependencies": {
     "dotenv": "16.0.0",
