Creacion de PDF

--- a/package.json
+++ b/package.json
@@ -15,19 +15,22 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "5.0.1",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^4.6.0",
+    "connect-flash": "0.1.1",
+    "connect-mongo": "4.6.0",
     "express": "4.17.3",
     "express-handlebars": "6.0.3",
-    "express-session": "^1.17.2",
+    "express-session": "1.17.2",
     "express-sessions": "1.0.6",
-    "html-pdf": "^3.0.1",
-    "method-override": "^3.0.0",
+    "html-pdf": "3.0.1",
+    "html2canvas": "1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-html2canvas": "1.4.9",
+    "method-override": "3.0.0",
     "mongoose": "6.2.9",
-    "morgan": "^1.10.0",
+    "morgan": "1.10.0",
     "passport": "0.5.2",
     "passport-local": "1.0.0",
-    "pdf-creator-node": "^2.3.4"
+    "pdf-creator-node": "2.3.4"
   },
   "devDependencies": {
     "dotenv": "16.0.0",
