--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "express-sessions": "1.0.6",
     "html-pdf": "3.0.1",
     "html2canvas": "1.4.1",
+    "install": "^0.13.0",
     "jspdf": "^2.5.1",
     "jspdf-html2canvas": "1.4.9",
     "method-override": "3.0.0",
+    "mongodb": "^4.7.0",
     "mongoose": "6.2.9",
     "morgan": "1.10.0",
     "passport": "0.5.2",
